# transcribe_audio

./: .env.example  .env.sample  .gitignore  BATCH_PROCESSING_GUIDE.md  CHANGES.txt  CLAUDE.md  README.md  TESTING.md  batch_process_transcripts.py  batch_transcribe.py  convert_audio.sh  copy_audio_files.py  costs.txt  pipeline.py  post_process.py  preview_batch_processing.py  print_transcripts.py  pyproject.toml  transcribe.py  transcribe_pipeline.py  verify_text_integrity.py  voice_memo_watcher.py
spec/: context_prompt_improvement.md
test/: sample.txt  test_context_extraction.py  test_copy_audio_files.py  test_output_options.py  test_transcribe.py  test_transcribe_pipeline.py  test_voice_memo_watcher.py
test/samples/: context_test_explicit.txt  context_test_implicit.txt  context_test_markers.txt  context_test_multiple.txt  context_test_no_context.txt
