[project]
name = "transcribe-voicemails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.8.0",
    "spacy[lookups]>=3.7.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
]
